--- a/src/index.css
+++ b/src/index.css
@@ -45,12 +45,16 @@ body {
   font-size: 25px;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  width: 70px;
+  height: 70px;
+  z-index: 2;
 }
 
 .lane {
   border-radius: 5px;
   cursor: pointer;
   background: rgb(28 28 30);
+  z-index: 1;
 }
 
 .lane:hover {
@@ -63,17 +67,4 @@ body {
   justify-content: center;
   border-top: 1px solid lightgray;
   padding: 5px;
-}
-
-.blockShoot {
-  width: 70px;
-  height: 70px;
-  display: flex;
-  border-radius: 10px;
-  border: 2px solid white;
-  padding: 5px;
-}
-
-.blockShoot>div {
-  flex-grow: 1;
 }
