--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,44 @@ body {
   right: 0px;
   transform: scale(1); /* opcional */
 }
+
+.next-block-wrapper {
+  width: 70px;
+  height: 70px;
+  position: relative;
+  cursor: pointer;
+}
+
+.overlay {
+  pointer-events: auto;
+  width: 100%;
+  height: 100%;
+  background: rgba(30, 30, 30, 0.9);
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px;
+  z-index: 10;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 5px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 3px;
+  margin-top: 6px;
+  overflow: hidden;
+  z-index: 14;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  background: rgb(36, 79, 220);
+  transition: width 0.1s linear;
+  border-radius: 3px 0 0 3px;
+}
