--- a/src/index.css
+++ b/src/index.css
@@ -385,3 +385,23 @@ body {
     z-index: 5;
     pointer-events: none; /* Permite hacer clic a través del tooltip */
 }
+
+
+
+.hint-toggle-btn {
+  position: absolute;
+  left: -110px;
+  top: 30%;
+  background-color: #555;
+  color: white;
+  border: none;
+  padding: 8px 14px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.1s ease-in-out;
+}
+
+.hint-toggle-btn:hover {
+  background-color: #777;
+}
